--- a/7. API_restful_js(Oauth2.0 - con testing)/Front/index.html
+++ b/7. API_restful_js(Oauth2.0 - con testing)/Front/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-dark">
     <div class="container bg-light rounded-3 p-5 mt-3">
-        <h1>Testing automatizado</h1>
+        <h1>🔬Testing automatizado</h1>
         <p>Esta es una prueba automatizada de las funcionalidades de la API RESTful.</p>
         <hr>
         <p>Prueba 1: Registro de usuario. Resultado: <strong id="testresult-1" class="loader"></strong></p>
