--- a/7. API_restful_js(Oauth2.0 - testing)/Front/index.html
+++ b/7. API_restful_js(Oauth2.0 - testing)/Front/index.html
@@ -17,7 +17,7 @@
         <hr>
         <p>Prueba 1: Registro de usuario. Resultado: <strong id="testresult-1" class="loader"></strong></p>
         <p>Prueba 2: Login de usuario. Resultado: <strong id="testresult-2" class="loader"></strong></p>
-        <p>Prueba 3: Prueba de token/key de usuario. Resultado: <strong id="testresult-3" class="loader"></strong></p>
+        <p>Prueba 3: Validación de token/key de usuario. Resultado: <strong id="testresult-3" class="loader"></strong></p>
     </div>
 
     <!-- Scripts -->
@@ -48,7 +48,7 @@
             }
         }
 
-        // Prueba de registro de usuario
+        // Prueba 1: Registro de usuario
         async function testUserRegistration() {
             // Conversión de imagen de prueba a base64
             fetch(testData.imagen)
@@ -62,17 +62,15 @@
 
                     // Efectua la llamada a la API
                     const response = await fetchData('../API/api.php/usuarios', 'POST', testData);
-                    console.log('Registro de usuario:', response);
                     document.getElementById('testresult-1').classList.remove('loader');
-                    if (response && response.success) {
-                        console.log('Usuario registrado correctamente');
+                    if (response.success) {
                         document.getElementById('testresult-1').innerText = '✅ Éxito';
                         document.getElementById('testresult-1').classList.add('text-success');
-                    } else {
-                        console.error('Error al registrar usuario:', response ? response.error : 'No response');
-                        document.getElementById('testresult-1').innerText = '❌ Fallo';
+                    } else if(response.error) {
+                        document.getElementById('testresult-1').innerText = '❌ Fallo: '+ response.error;
                         document.getElementById('testresult-1').classList.add('text-danger');
                     }
+                    testUserLogin();
                 };
                 reader.readAsDataURL(blob);
             })
@@ -81,56 +79,43 @@
             });
         }
 
-        // Prueba de login de usuario
+        // Prueba 2: Login de usuario
         async function testUserLogin() {
             const response = await fetchData('../API/api.php/login', 'POST', {
                 usr_email: testData.usr_email,
                 usr_pass: testData.usr_pass
             });
-            console.log('Login de usuario:', response);
             document.getElementById('testresult-2').classList.remove('loader');
-            if (response && response.success) {
-                console.log('Usuario logueado correctamente:', response.usuario);
+            if (response.success) {
                 // Guarda el token/key del usuario
-                testData.usr_key = response.usuario[2];
+                testData.usr_key = response.success[2];
                 document.getElementById('testresult-2').innerText = '✅ Éxito';
                 document.getElementById('testresult-2').classList.add('text-success');
-            } else {
-                console.error('Error al loguear usuario:', response ? response.error : 'No response');
-                document.getElementById('testresult-2').innerText = '❌ Fallo';
+            } else if (response.error) {
+                document.getElementById('testresult-2').innerText = '❌ Fallo: '+ response.error;
                 document.getElementById('testresult-2').classList.add('text-danger');
             }
+            testUserToken();
         }
 
-        // Prueba de token/key
+        // Prueba 3: Validación de token/key
         async function testUserToken() {
             const response = await fetchData('../API_test/api.php/testkey', 'POST', {
                 key: testData.usr_key
             });
-            console.log('Token de usuario:', response);
             document.getElementById('testresult-3').classList.remove('loader');
-            if (response && response.success) {
-                console.log('Token obtenido correctamente:', response.token);
+            if (response.success) {
                 document.getElementById('testresult-3').innerText = '✅ Éxito';
                 document.getElementById('testresult-3').classList.add('text-success');
-            } else {
-                console.error('Error al obtener token:', response ? response.error : 'No response');
-                document.getElementById('testresult-3').innerText = '❌ Fallo';
+            } else if (response.error) {
+                document.getElementById('testresult-3').innerText = '❌ Fallo: '+ response.error;
                 document.getElementById('testresult-3').classList.add('text-danger');
             }
         }
 
         // Ejecuta las pruebas
-        // Registra usuario
-        testUserRegistration().finally(() => {
-            // Login de usuario
-            testUserLogin().finally(() => {
-                // Prueba de token/key de usuario
-                testUserToken().finally(() => {
-                    console.log('Pruebas completadas');
-                });
-            });    
-        });
+        testUserRegistration()
+
     </script>
 </body>
 </html>
